--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,13 +12,17 @@
   --font-mono: var(--font-geist-mono);
 }
 
+
 @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
     --foreground: #ededed;
   }
 }
-
+@import "tailwindcss";
+body {
+  font-family: Arial, Helvetica, sans-serif;
+}
 body {
   background: var(--background);
   color: var(--foreground);
